--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TODO Example</title>
+    <title>Todo Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
